# templates-thenotary

./: bundlegem.yml
edu-talk/: brief.md  bundlegem.yml
go-cli/: bundlegem.yml
go-cli/cmd/foo-bar/: main.go
go-cli/pkg/api/: api.go
rust-win-uwp/: .gitignore  Cargo.toml  README.md  build.rs  register.cmd
rust-win-uwp/appx/: AppxManifest.xml
rust-win-uwp/src/: main.rs
rust-win-uwp/src/views/: main_actions.rs  main_view.rs  mod.rs
template-edu-presentation-old/: README.md  README.md.tt  brief.md  bundlegem.yml  index.html
template-edu-presentation-old/slides/: index.html
template-edu-talk/: README.md  README.md.tt  essay.md.tt  index.js.tt  package-lock.json.tt  slides.html.tt
template-go-cli/: .gitignore  .gitignore.tt  README.md  README.md.tt  bundlegem.yml
template-go-cli/cmd/#{unprefixed_name}/: main.go.tt
template-go-cli/pkg/api/: api_test.go.tt
